// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders chip with close button 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(247, 242, 250, 1)",
      "borderRadius": 8,
      "height": 32,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(247, 242, 250, 1)",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityLabel="Example Chip"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
            },
            {
              "borderRadius": 8,
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "opacity": 1,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 18,
              "justifyContent": "center",
              "marginRight": 8,
              "width": 18,
            }
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(103, 80, 164, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            information
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "includeFontPadding": false,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(73, 69, 79, 1)",
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": 32,
          },
          null,
          null,
        ]
      }
      testID="chip-close"
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(73, 69, 79, 1)",
              "fontSize": 18,
            },
            [
              {
                "lineHeight": 18,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
          ]
        }
      >
        close
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders chip with custom close button 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(247, 242, 250, 1)",
      "borderRadius": 8,
      "height": 32,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(247, 242, 250, 1)",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityLabel="Example Chip"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
            },
            {
              "borderRadius": 8,
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "opacity": 1,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 18,
              "justifyContent": "center",
              "marginRight": 8,
              "width": 18,
            }
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(103, 80, 164, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            information
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "includeFontPadding": false,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(73, 69, 79, 1)",
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": 32,
          },
          null,
          null,
        ]
      }
      testID="chip-close"
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          [
            {
              "color": "rgba(73, 69, 79, 1)",
              "fontSize": 18,
            },
            [
              {
                "lineHeight": 18,
                "transform": [
                  {
                    "scaleX": 1,
                  },
                ],
              },
              {
                "backgroundColor": "transparent",
              },
            ],
          ]
        }
      >
        arrow-down
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders chip with icon 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(247, 242, 250, 1)",
      "borderRadius": 8,
      "height": 32,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(247, 242, 250, 1)",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityLabel="Example Chip"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
            },
            {
              "borderRadius": 8,
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "opacity": 1,
              "paddingLeft": 8,
              "paddingRight": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 18,
              "justifyContent": "center",
              "marginRight": 8,
              "width": 18,
            }
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(103, 80, 164, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            information
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "includeFontPadding": false,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(73, 69, 79, 1)",
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders chip with onPress 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(247, 242, 250, 1)",
      "borderRadius": 8,
      "height": 32,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(247, 242, 250, 1)",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityLabel="Example Chip"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
            },
            {
              "borderRadius": 8,
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "opacity": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "includeFontPadding": false,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(73, 69, 79, 1)",
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders outlined disabled chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderRadius": 8,
      "height": 32,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "rgba(202, 196, 208, 1)",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityLabel="Example Chip"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
            },
            {
              "borderRadius": 8,
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "opacity": 0.38,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "includeFontPadding": false,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders selected chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(232, 222, 248, 1)",
      "borderRadius": 8,
      "height": 32,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(232, 222, 248, 1)",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityLabel="Example Chip"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
            },
            {
              "borderRadius": 8,
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "overflow": "hidden",
              "position": "relative",
            },
            {
              "opacity": 1,
              "paddingLeft": 8,
              "paddingRight": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 18,
              "justifyContent": "center",
              "marginRight": 8,
              "width": 18,
            }
          }
        >
          <Text
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
              ]
            }
          >
            check
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "includeFontPadding": false,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(29, 25, 43, 1)",
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;
